# RetrievalPaper4RAG

./: README.md  bash.sh  pyproject.toml
dataset/: test_query.json  train_query.json  valid_query.json
src/: dataset.py  loss_functions.py  metrics.py  metrix.py  model.py  train.py
