[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["lychee1223 <lychee.vinculum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
transformers = "^4.47.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
